syntax = "proto3";

option go_package = ".;acproto";

package AcFunDanmu;

message CommonStateSignalAuthorChatChangeSoundConfig {
	string authorChatId = 1;
	SoundConfigChangeType soundConfigChangeType = 2;

	enum SoundConfigChangeType {
		UNKNOWN = 0;
		OPEN_SOUND = 1;
		CLOSE_SOUND = 2;
	}
}
